--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4",
+    "unstorage": "^1.16.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
