--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["jscodeshift", "orpc"]
+  "cSpell.words": ["Flexbox", "jscodeshift", "orpc"]
 }
