--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -12,12 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.11",
     "@orpc/client": "^1.8.3",
     "@orpc/server": "^1.8.3",
     "@orpc/tanstack-query": "^1.8.3",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.5",
     "hono": "^4.9.4",
+    "ai": "^5.0.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4",
