--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,12 @@
       "mode": "auto"
     }
   ],
-  "cSpell.words": ["Flexbox", "jscodeshift", "orpc", "Parseable", "syncpack"]
+  "cSpell.words": [
+    "Flexbox",
+    "jscodeshift",
+    "jsonrepair",
+    "orpc",
+    "Parseable",
+    "syncpack"
+  ]
 }
