--- a/blocks/ai/package.json
+++ b/blocks/ai/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@orpc/server": "^1.8.3"
+    "@orpc/server": "^1.8.8"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.0",
@@ -18,8 +18,8 @@
     "eslint": "^9",
     "eslint-plugin-react-hooks": "^6.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
     "typescript": "^5",
-    "typescript-eslint": "^8.40.0",
-    "globals": "^16.3.0"
+    "typescript-eslint": "^8.40.0"
   }
 }
