--- a/templates/nextjs/package.json
+++ b/templates/nextjs/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "next": "15.5.5"
   },
   "devDependencies": {
