feat(templates): nextjs, nuxt, svelte-kit

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,6 @@ packages:
   - "templates/*"
   - "blocks/*"
 sharedWorkspaceLockfile: false
+onlyBuiltDependencies:
+  - esbuild
+  - '@tailwindcss/oxide'
