--- a/tools/hero-images/package.json
+++ b/tools/hero-images/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quests-template-basic",
+  "name": "@quests/tools-hero-images",
   "private": true,
   "version": "0.0.0",
   "type": "module",
