--- a/templates/shadcn/package.json
+++ b/templates/shadcn/package.json
@@ -41,7 +41,6 @@
     "tw-animate-css": "^1.3.7",
     "typescript": "^5",
     "typescript-eslint": "^8.40.0",
-    "vite": "^7.1.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^7.1.3"
   }
 }
