fix: check templates' .gitignore

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "lint:fix": "turbo run lint:fix",
     "typecheck": "turbo run check:types",
     "typecheck:all": "turbo run build --dry-run",
-    "check": "turbo run lint check:types syncpack:lint knip",
+    "check": "turbo run lint check:types syncpack:lint knip check-gitignore",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "create-app": "tsx scripts/create-app.ts",
     "apply-block": "tsx scripts/apply-block.ts",
     "list-blocks": "tsx scripts/list-blocks.ts",
+    "check-gitignore": "tsx scripts/check-gitignore.ts",
     "syncpack": "syncpack",
     "syncpack:lint": "syncpack lint",
     "syncpack:fix": "syncpack fix"
