--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,7 @@
       "persistent": true
     },
     "//#syncpack:lint": {},
-    "//#knip": {}
+    "//#knip": {},
+    "//#check-gitignore": {}
   }
 }
