--- a/templates/nextjs/.gitignore
+++ b/templates/nextjs/.gitignore
@@ -1,3 +1,5 @@
+### Quests .gitignore ###
+
 # Logs
 logs
 *.log
@@ -42,6 +44,8 @@ etilqs_*
 
 # TypeScript cache
 *.tsbuildinfo
+
+### End of Quests .gitignore ###
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
