--- a/templates/shadcn/.gitignore
+++ b/templates/shadcn/.gitignore
@@ -1,3 +1,5 @@
+### Quests .gitignore ###
+
 # Logs
 logs
 *.log
@@ -42,3 +44,5 @@ etilqs_*
 
 # TypeScript cache
 *.tsbuildinfo
+
+### End of Quests .gitignore ###
