--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:fix": "turbo run lint:fix",
     "typecheck": "turbo run check:types",
     "typecheck:all": "turbo run build --dry-run",
-    "check": "turbo run lint check:types syncpack:lint knip check-gitignore",
+    "check": "turbo run lint check:types syncpack:lint knip check-gitignore cspell cspell:unused",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "create-app": "tsx scripts/create-app.ts",
@@ -27,10 +27,21 @@
     "check-gitignore": "tsx scripts/check-gitignore.ts",
     "syncpack": "syncpack",
     "syncpack:lint": "syncpack lint",
-    "syncpack:fix": "syncpack fix"
+    "syncpack:fix": "syncpack fix",
+    "cspell": "cspell \"**/*\" --no-progress",
+    "cspell:fix": "cspell \"**/*\" --no-progress --fix",
+    "cspell:unused": "cspell-check-unused-words"
   },
   "devDependencies": {
+    "@cspell/dict-bash": "^4.2.1",
+    "@cspell/dict-css": "^4.0.18",
+    "@cspell/dict-html": "^4.0.12",
+    "@cspell/dict-node": "^5.0.8",
+    "@cspell/dict-npm": "^5.2.19",
+    "@cspell/dict-typescript": "^3.2.3",
     "@types/node": "^22",
+    "cspell": "^9.2.2",
+    "cspell-check-unused-words": "^1.5.4",
     "ignore": "^7.0.5",
     "jscodeshift": "^17.3.0",
     "knip": "^5.63.0",
