--- a/blocks/ai/package.json
+++ b/blocks/ai/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.0",
-    "@types/node": "^22",
+    "@types/node": "22.19.2",
     "eslint": "^9",
     "eslint-plugin-react-hooks": "^6.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
