--- a/templates/chat-with-files/package.json
+++ b/templates/chat-with-files/package.json
@@ -27,7 +27,7 @@
     "@eslint/js": "^10.0.0",
     "@hono/vite-dev-server": "^0.20.1",
     "@tailwindcss/vite": "^4.1.12",
-    "@types/node": "^22",
+    "@types/node": "22.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.1",
