--- a/templates/micro-chatbot/package.json
+++ b/templates/micro-chatbot/package.json
@@ -48,7 +48,7 @@
     "@eslint/js": "^10.0.0",
     "@hono/vite-dev-server": "^0.20.1",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22",
+    "@types/node": "22.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
