--- a/templates/prompt-library/package.json
+++ b/templates/prompt-library/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@eslint/js": "^10.0.0",
     "@hono/vite-dev-server": "^0.20.1",
-    "@types/node": "^22",
+    "@types/node": "22.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.1",
