--- a/templates/svelte-kit/package.json
+++ b/templates/svelte-kit/package.json
@@ -19,7 +19,7 @@
     "@sveltejs/kit": "^2.43.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/vite": "^4.1.12",
-    "@types/node": "^22",
+    "@types/node": "22.19.2",
     "eslint": "^9",
     "eslint-plugin-svelte": "^3.12.4",
     "globals": "^16.3.0",
