--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -28,16 +28,17 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@eslint/js": "^10.0.0",
+    "@eslint/js": "^9",
     "@hono/vite-dev-server": "^0.20.1",
     "@types/node": "22.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.0.1",
     "eslint": "^9",
-    "eslint-plugin-react-hooks": "^6.0.0",
+    "eslint-plugin-react-hooks": "^7",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "typescript-eslint": "^8.40.0",
     "vite": "^7.1.3"
